--- a/.github/workflows/firstcidcd.yaml
+++ b/.github/workflows/firstcidcd.yaml
@@ -13,3 +13,13 @@ jobs:
               run: |
                 echo "Demo step 2"
                 ls -lah
+    testjob2:
+        runs-on: ubuntu-latest
+        needs: testjob1
+        steps:
+            - name: Demo step 3
+              run: echo "Hi step 3"
+            - name: Demo step 4
+              run: |
+                echo "Demo step 4"
+                ls -lah
