--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -19,3 +19,21 @@ jobs:
               run: go build -v
             - name: Run tests
               run: go test -v
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Checkout 
+              uses: actions/checkout@v2
+            
+            - name: Login to Docker Hub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
+            - name: Build and push
+              uses: docker/build-push-action@v6
+              with:
+                push: true
+                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:latest
+            
