build repo and push with sha

--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -35,5 +35,5 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                 push: true
-                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:latest
+                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:{{ github.sha }}
             
