--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -25,6 +25,9 @@ jobs:
         steps:
             - name: Checkout 
               uses: actions/checkout@v2
+            - name: Tag image
+              id: tags
+              run: echo "sha_short=$(git rev-parse --short HEAD)"  
             
             - name: Login to Docker Hub
               uses: docker/login-action@v3
@@ -35,5 +38,5 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                 push: true
-                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:${{ github.sha }}
+                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:${{ steps.tags.outputs.sha_short }}
             
