--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -27,7 +27,7 @@ jobs:
               uses: actions/checkout@v2
             - name: Tag image
               id: tags
-              run: echo "sha_short=$(git rev-parse --short HEAD)"  
+              run: echo "::set-output name=sha_version::${{ github.sha }}"  
             
             - name: Login to Docker Hub
               uses: docker/login-action@v3
@@ -38,5 +38,5 @@ jobs:
               uses: docker/build-push-action@v6
               with:
                 push: true
-                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:${{ steps.tags.outputs.sha_short }}
+                tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:${{ steps.tags.outputs.sha_version }}
             
