--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -39,4 +39,14 @@ jobs:
               with:
                 push: true
                 tags: ${{ secrets.DOCKER_USERNAME }}/sampleapp:${{ steps.tags.outputs.sha_version }}
+    notify:
+        runs-on: ubuntu-latest
+        needs: [build, deploy]
+        steps:
+            - name: Notify People
+              uses: cl8dep/action-discord@v0
+              with:
+                webhook: ${{ secrets.DISCORD_NOTIFY }}
+                message: 'Build and Deployed Successfully'
+            
             
