--- a/.github/workflows/on-pull-req.yaml
+++ b/.github/workflows/on-pull-req.yaml
@@ -44,9 +44,10 @@ jobs:
         needs: [build, deploy]
         steps:
             - name: Notify People
-              uses: cl8dep/action-discord@v0
+              uses: fateyan/action-discord-notifier@v1
               with:
+                message-title: New Commits Pushed
                 webhook: ${{ secrets.DISCORD_NOTIFY }}
-                message: 'Build and Deployed Successfully'
+        
             
             
